# pr-reelsScraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py  config.py  insta.py  log.py  models.py  urltools.py
src/export/: csv_writer.py
src/ig_reel_fetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/llm/: adapter.py  openai_impl.py  prompts.py
src/pipeline/: map_places.py  understand.py
src/places/: details.py  rank.py  search.py
src/utils/: media.py  text.py
tests/: test_smoke_offline.py  test_urltools.py
